# Lesta_Games_test_task

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  sort_testing.py
cyclic_buffer_fifo/: README.md  cyclic_buffer_deque.py  cyclic_buffer_list.py
even_check/: README.md  even_check.py
sort_algorithm/: README.md  optimized_quick_sort.py
sort_algorithm/other_sorts/: basic_quick_sort.py  heap_sort.py  merge_sort.py
tests/test_cyclic_buffer/: conftest.py  test_buffer.py
tests/test_even_check/: conftest.py  test_even.py
tests/test_sort_algorithm/: test_sort.py
